# rust_mockall_example

./: Cargo.toml  docker-compose-test.yml
src/: main.rs
src/auth/: auth_service_impl.rs  mod.rs  ports.rs  redis_token_repo.rs
