[package]
name = "structuring_rust_project_for_testability"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.52"
mockall = "0.11.0"
serde = { version = "1.0.136", features = ["derive"] }
actix-rt = "2.6.0"
redis = { version = "0.21.5", features = ["tokio-comp"] }
uuid = { version = "0.8.2", features = ["v4"] }
tracing = "0.1"
tracing-subscriber = "0.2"
tracing-futures = "0.2.0"

[dev-dependencies]
test-log = { version = "0.2.8", default-features = false, features = ["trace"] }